--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sweetalert2": "^11.14.2"
   },
   "devDependencies": {
