--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-divine-glitter-a4gqdd75-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="sJ82HhpMNDTz"
 POSTGRES_DATABASE="verceldb"
+NEXT_PUBLIC_BASE_API_URL=http://localhost:3000
